# Turing-Machine

./: CMakeLists.txt  README.md
alphabet/: CMakeLists.txt  alphabet.cpp  alphabet.h
architecture/: TuringMachine.oob  TuringMachine.oom
command/: CMakeLists.txt  command.cpp  command.h
command_set/: CMakeLists.txt  command_set.cpp  command_set.h
example/: commands.tm
exceptions/: CMakeLists.txt  err_infinite_loop.cpp  err_invalid_command.cpp  err_invalid_symbol.cpp  err_no_command.cpp  exceptions.h
machine/: CMakeLists.txt  machine.cpp  machine.h
main/: CMakeLists.txt  main.cpp
tape/: CMakeLists.txt  tape.cpp  tape.h
unit_tests/: CMakeLists.txt  test_alphabet.cpp  test_alphabet.cpp.in  test_command_set.cpp  test_command_set.cpp.in  test_tape.cpp  test_tape.cpp.in
unit_tests/input_files/: cmd_set.txt  cmd_set_2.txt  tape.txt
